// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker renders correctly 1`] = `
.c0.rovna-ui-picker {
  width: 256px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

<div
  className="rovna-ui-picker css-dev-only-do-not-override-u64svk c0"
  onClick={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-picker-input"
  >
    <input
      autoComplete="off"
      data-testid="rovna-ui-time-picker"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      placeholder="Выберите время"
      readOnly={true}
      size={10}
      title=""
      value=""
    />
    <span
      className="rovna-ui-picker-suffix"
      onMouseDown={[Function]}
    >
      <span
        aria-label="clock-circle"
        className="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`TimePicker with custom width renders correctly 1`] = `
.c0.rovna-ui-picker {
  width: 100px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

<div
  className="rovna-ui-picker css-dev-only-do-not-override-u64svk c0"
  onClick={[Function]}
  style={{}}
>
  <div
    className="rovna-ui-picker-input"
  >
    <input
      autoComplete="off"
      data-testid="rovna-ui-time-picker"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      placeholder="Выберите время"
      readOnly={true}
      size={10}
      title=""
      value=""
    />
    <span
      className="rovna-ui-picker-suffix"
      onMouseDown={[Function]}
    >
      <span
        aria-label="clock-circle"
        className="anticon anticon-clock-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="clock-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`TimePicker with dropdown renders correctly 1`] = `
[
  .c0.rovna-ui-picker {
  width: 256px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

<div
    className="rovna-ui-picker css-dev-only-do-not-override-u64svk c0"
    onClick={[Function]}
    style={{}}
  >
    <div
      className="rovna-ui-picker-input"
    >
      <input
        autoComplete="off"
        data-testid="rovna-ui-time-picker"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        placeholder="Выберите время"
        readOnly={true}
        size={10}
        title=""
        value=""
      />
      <span
        className="rovna-ui-picker-suffix"
        onMouseDown={[Function]}
      >
        <span
          aria-label="clock-circle"
          className="anticon anticon-clock-circle"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="clock-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>,
  .c0.rovna-ui-picker {
  width: 256px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar-track {
  background: #F4F4F5FF;
  border-radius: 16px;
}

.c0.rovna-ui-picker-dropdown .rovna-ui-picker-time-panel-column::-webkit-scrollbar-thumb {
  background-color: #DDDEE1FF;
  border-radius: 16px;
}

<div
    className="rovna-ui-picker-dropdown rovna-ui-slide-up-appear rovna-ui-slide-up-appear-prepare rovna-ui-slide-up css-dev-only-do-not-override-u64svk c0 rovna-ui-picker-dropdown-placement-bottomLeft"
    style={
      {
        "--arrow-x": "0px",
        "--arrow-y": "0px",
        "bottom": "auto",
        "boxSizing": "border-box",
        "left": "-1000vw",
        "right": "auto",
        "top": "-1000vh",
        "zIndex": undefined,
      }
    }
  >
    <div
      className="rovna-ui-picker-panel-container"
      onMouseDown={[Function]}
    >
      <div
        className="rovna-ui-picker-panel-layout"
      >
        <div
          className="rovna-ui-picker-panel rovna-ui-picker-panel-focused"
          onBlur={[Function]}
          onKeyDown={[Function]}
          tabIndex={-1}
        >
          <div
            className="rovna-ui-picker-time-panel"
          >
            <div
              className="rovna-ui-picker-content"
            >
              <ul
                className="rovna-ui-picker-time-panel-column"
                style={
                  {
                    "position": "relative",
                  }
                }
              >
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    00
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    01
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    02
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    03
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    04
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    05
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    06
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    07
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    08
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    09
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    10
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    11
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    12
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    13
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    14
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    15
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    16
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    17
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    18
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    19
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    20
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    21
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    22
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    23
                  </div>
                </li>
              </ul>
              <ul
                className="rovna-ui-picker-time-panel-column"
                style={
                  {
                    "position": "relative",
                  }
                }
              >
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    00
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    01
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    02
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    03
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    04
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    05
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    06
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    07
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    08
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    09
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    10
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    11
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    12
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    13
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    14
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    15
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    16
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    17
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    18
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    19
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    20
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    21
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    22
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    23
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    24
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    25
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    26
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    27
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    28
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    29
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    30
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    31
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    32
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    33
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    34
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    35
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    36
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    37
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    38
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    39
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    40
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    41
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    42
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    43
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    44
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    45
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    46
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    47
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    48
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    49
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    50
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    51
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    52
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    53
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    54
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    55
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    56
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    57
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    58
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    59
                  </div>
                </li>
              </ul>
              <ul
                className="rovna-ui-picker-time-panel-column"
                style={
                  {
                    "position": "relative",
                  }
                }
              >
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    00
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    01
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    02
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    03
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    04
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    05
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    06
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    07
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    08
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    09
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    10
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    11
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    12
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    13
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    14
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    15
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    16
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    17
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    18
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    19
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    20
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    21
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    22
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    23
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    24
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    25
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    26
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    27
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    28
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    29
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    30
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    31
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    32
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    33
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    34
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    35
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    36
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    37
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    38
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    39
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    40
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    41
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    42
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    43
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    44
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    45
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    46
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    47
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    48
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    49
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    50
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    51
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    52
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    53
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    54
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    55
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    56
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    57
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    58
                  </div>
                </li>
                <li
                  className="rovna-ui-picker-time-panel-cell"
                  onClick={[Function]}
                >
                  <div
                    className="rovna-ui-picker-time-panel-cell-inner"
                  >
                    59
                  </div>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="rovna-ui-picker-footer"
          >
            <ul
              className="rovna-ui-picker-ranges"
            >
              <li
                className="rovna-ui-picker-now"
              >
                <a
                  className="rovna-ui-picker-now-btn"
                  onClick={[Function]}
                >
                  Сейчас
                </a>
              </li>
              <li
                className="rovna-ui-picker-ok"
              >
                <button
                  className="rovna-ui-btn css-dev-only-do-not-override-u64svk rovna-ui-btn-primary rovna-ui-btn-sm"
                  disabled={true}
                  onClick={[Function]}
                  style={{}}
                  type="button"
                >
                  <span>
                    ОК
                  </span>
                  
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
